# bert-wasm-demo

./: .gitignore  Cargo.toml  README.md
src/: embedder.rs  lib.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx
web/src/lib/: worker.ts
