[package]
name = "bert-wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
num-traits = "0.2.19"
tokenizers = { version = "0.19.1", features = ["unstable_wasm"] }
anyhow = "1.0.86"
byteorder = "1.5.0"
log = "0.4.22"
rand = "0.9.0-alpha.1"
serde = "1.0.204"
serde_json = "1.0.120"
safetensors = "0.4.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.11"
js-sys = "0.3.64"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.0"
